# ppad

./: .gitignore  README.md  dockerfile  front.py  graphs.py  kraken.py  main.py  main_old.py  memoria_kraken.lyx  memoria_kraken.lyx~  pyproject.toml  requirements.txt  run.py  setup.py  style.py  tareas.txt  tests.py  to_do.txt  xethusd.py  xethusd2.py
.streamlit/: config.toml
docs/: #memoria_definitiva.lyx#  #memoria_definitiva0.lyx#  #memoria_kraken.lyx#  enunciado.txt  memoria_RodrigodelaNuezMoraleda_MarcosCastroCacho.lyx  memoria_definitiva.lyx  memoria_definitiva0.lyx  memoria_kraken.lyx  memoria_kraken.lyx~
graphs/: MobileMeanStochastic.py  Stochastic.py
graphs_old/: MobileMeanStochastic.py  Stochastic.py  __init__.py
