[tool.poetry]
name = "krakenpythonmarcosrodrigo"
version = "0.1.0"
description = "A streamlit tool for rendering kraken data"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "4.14.3"
streamlit = "0.79.0"
coverage = "5.5"
pandas = "2.1.4"
numpy = "1.26.2"
krakenex = "2.1.0"
streamlit-option-menu = "0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
